--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, viewport-fit=cover" />
-  <title>Game UI Shell v11 (Final Simplified)</title>
+  <title>Game UI Shell v12 (Tap fix + cleanup)</title>
   <style>
     :root {
       --max-phone-width: 420px;
       --top-height: 10vh;
       --inventory-height: 10vh;
-      --bottom-height: 10vh; /* reduced bottom height */
+      --bottom-height: 9vh; /* slightly smaller footer */
 
       --border-radius-lg: 24px;
       --border-radius-md: 12px;
@@ -30,6 +30,11 @@
 
       --text-primary: #fff;
       --text-dim: rgba(255,255,255,0.7);
+    }
+
+    * {
+      box-sizing: border-box;
+      -webkit-tap-highlight-color: transparent;
     }
 
     body {
@@ -54,8 +59,10 @@
       box-shadow: 0 40px 120px rgba(0,0,0,0.85), 0 0 120px rgba(14,165,233,0.12), 0 0 240px rgba(168,85,247,0.06);
       display: flex;
       flex-direction: column;
+      position: relative;
     }
 
+    /* TOP BAR */
     .top-section {
       flex: 0 0 var(--top-height);
       background: radial-gradient(circle at 50% 0%, var(--panel-bg-start) 0%, var(--panel-bg-end) 80%);
@@ -94,13 +101,14 @@
       color: var(--text-dim);
     }
 
+    /* MIDDLE / PLAY AREA */
     .middle-section {
       flex: 1;
       display: flex;
       flex-direction: column;
       align-items: center;
       justify-content: flex-start;
-      padding-top: 6px; /* meters even higher */
+      padding-top: 6px; /* meters are high */
       background: radial-gradient(circle at 50% 35%, rgba(180,192,212,0.22) 0%, rgba(0,0,0,0) 60%), radial-gradient(circle at 50% 50%, #2a2a44 0%, #000 80%);
       position: relative;
     }
@@ -141,17 +149,17 @@
       box-shadow: 0 0 12px rgba(255,255,255,0.4);
     }
 
-    .meter-bar-inner.hp { background: linear-gradient(to right, #dc2626 0%, #f87171 100%); width: 80%; }
-    .meter-bar-inner.energy { background: linear-gradient(to right, #0284c7 0%, #7dd3fc 100%); width: 45%; }
-
-    .placeholder {
-      margin-top: 16px;
-      color: rgba(255,255,255,0.7);
-      text-align: center;
-      font-size: 0.8rem;
-      opacity: 0.7;
+    .meter-bar-inner.hp {
+      background: linear-gradient(to right, #dc2626 0%, #f87171 100%);
+      width: 80%;
     }
 
+    .meter-bar-inner.energy {
+      background: linear-gradient(to right, #0284c7 0%, #7dd3fc 100%);
+      width: 45%;
+    }
+
+    /* INVENTORY */
     .inventory-row {
       flex: 0 0 var(--inventory-height);
       background: radial-gradient(circle at 50% 0%, rgba(40,56,84,0.4) 0%, rgba(10,15,27,0.18) 70%);
@@ -172,15 +180,17 @@
       font-size: 1.5rem;
       color: #fff;
       box-shadow: 0 8px 16px rgba(0,0,0,0.75), 0 1px 2px rgba(255,255,255,0.22) inset;
+      user-select: none;
     }
 
+    /* BOTTOM CONTROLS */
     .bottom-section {
       flex: 0 0 var(--bottom-height);
       background: radial-gradient(circle at 50% 100%, var(--panel-bg-start) 0%, var(--panel-bg-end) 70%);
       display: flex;
       justify-content: center;
       align-items: center;
-      padding: 8px 12px; /* reduced padding */
+      padding: 6px 12px; /* even tighter */
     }
 
     .buttons-area {
@@ -196,6 +206,19 @@
       background: radial-gradient(circle at 50% 0%, rgba(255,255,255,0.18) 0%, rgba(0,0,0,0) 70%);
       border: 1px solid rgba(255,255,255,0.24);
       box-shadow: 0 14px 28px rgba(0,0,0,0.8), 0 2px 4px rgba(255,255,255,0.18) inset, 0 0 48px rgba(168,85,247,0.45);
+      user-select: none;
+      touch-action: manipulation;
+      -webkit-user-select: none;
+      appearance: none;
+      border-radius: 9999px;
+      border-width: 1px;
+      border-style: solid;
+      cursor: pointer;
+    }
+
+    .round-btn:active {
+      transform: scale(0.94);
+      background: radial-gradient(circle at 50% 0%, rgba(255,255,255,0.24) 0%, rgba(0,0,0,0) 70%);
     }
 
     .round-btn.secondary {
@@ -207,12 +230,14 @@
 </head>
 <body>
   <main class="device">
+    <!-- TOP RESOURCES -->
     <header class="top-section">
       <div class="resource-card"><div class="resource-main-row">💰 <span>1,234</span></div><div class="resource-label">Gold</div></div>
       <div class="resource-card"><div class="resource-main-row">💎 <span>56</span></div><div class="resource-label">Gems</div></div>
       <div class="resource-card"><div class="resource-main-row">🪵 <span>12</span></div><div class="resource-label">Mats</div></div>
     </header>
 
+    <!-- GAME / MIDDLE -->
     <section class="middle-section">
       <section class="meters-area">
         <div class="meter-block">
@@ -225,10 +250,9 @@
           <div class="meter-bar-outer"><div class="meter-bar-inner energy"></div></div>
         </div>
       </section>
-
-      <div class="placeholder">GAME AREA</div>
     </section>
 
+    <!-- INVENTORY -->
     <div class="inventory-row">
       <div class="slot">🗡️</div>
       <div class="slot">🛡️</div>
@@ -236,6 +260,7 @@
       <div class="slot">🍗</div>
     </div>
 
+    <!-- CONTROLS -->
     <nav class="bottom-section">
       <section class="buttons-area">
         <button class="round-btn"></button>
