--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, viewport-fit=cover" />
-  <title>Game UI Shell v12 (Tap fix + cleanup)</title>
+  <title>Game UI Shell v14 (unified)</title>
   <style>
     :root {
       --max-phone-width: 420px;
       --top-height: 10vh;
       --inventory-height: 10vh;
-      --bottom-height: 9vh; /* slightly smaller footer */
+      --bottom-height: 9vh;
 
       --border-radius-lg: 24px;
       --border-radius-md: 12px;
@@ -30,6 +30,17 @@
 
       --text-primary: #fff;
       --text-dim: rgba(255,255,255,0.7);
+
+      /* top resource glow colors */
+      --resource-card-shadow-gold: rgba(251, 191, 36, 0.4);
+      --resource-card-shadow-magic: rgba(14,165,233,0.45);
+      --resource-card-shadow-grace: rgba(168,85,247,0.45);
+
+      /* bottom button gradients */
+      --btn-pink-start: #ff4f9a;
+      --btn-pink-end: #a50062;
+      --btn-purple-start: #8240ff;
+      --btn-purple-end: #3a0075;
     }
 
     * {
@@ -56,7 +67,9 @@
       border-radius: var(--border-radius-lg);
       overflow: hidden;
       border: 1px solid rgba(255,255,255,0.18);
-      box-shadow: 0 40px 120px rgba(0,0,0,0.85), 0 0 120px rgba(14,165,233,0.12), 0 0 240px rgba(168,85,247,0.06);
+      box-shadow: 0 40px 120px rgba(0,0,0,0.85),
+                  0 0 120px rgba(14,165,233,0.12),
+                  0 0 240px rgba(168,85,247,0.06);
       display: flex;
       flex-direction: column;
       position: relative;
@@ -84,7 +97,26 @@
       border: 1px solid rgba(255,255,255,0.16);
       border-radius: var(--border-radius-md);
       padding: 8px 6px;
-      box-shadow: 0 12px 24px rgba(0,0,0,0.7), 0 1px 2px rgba(255,255,255,0.12) inset, 0 0 24px rgba(14,165,233,0.32);
+      box-shadow: 0 12px 24px rgba(0,0,0,0.7),
+                  0 1px 2px rgba(255,255,255,0.12) inset;
+    }
+
+    .resource-card.gold {
+      box-shadow: 0 12px 24px rgba(0,0,0,0.7),
+                  0 1px 2px rgba(255,255,255,0.12) inset,
+                  0 0 24px var(--resource-card-shadow-gold);
+    }
+
+    .resource-card.magic {
+      box-shadow: 0 12px 24px rgba(0,0,0,0.7),
+                  0 1px 2px rgba(255,255,255,0.12) inset,
+                  0 0 24px var(--resource-card-shadow-magic);
+    }
+
+    .resource-card.grace {
+      box-shadow: 0 12px 24px rgba(0,0,0,0.7),
+                  0 1px 2px rgba(255,255,255,0.12) inset,
+                  0 0 24px var(--resource-card-shadow-grace);
     }
 
     .resource-main-row {
@@ -108,8 +140,9 @@
       flex-direction: column;
       align-items: center;
       justify-content: flex-start;
-      padding-top: 6px; /* meters are high */
-      background: radial-gradient(circle at 50% 35%, rgba(180,192,212,0.22) 0%, rgba(0,0,0,0) 60%), radial-gradient(circle at 50% 50%, #2a2a44 0%, #000 80%);
+      padding-top: 6px;
+      background: radial-gradient(circle at 50% 35%, rgba(180,192,212,0.22) 0%, rgba(0,0,0,0) 60%),
+                  radial-gradient(circle at 50% 50%, #2a2a44 0%, #000 80%);
       position: relative;
     }
 
@@ -149,23 +182,68 @@
       box-shadow: 0 0 12px rgba(255,255,255,0.4);
     }
 
+    /* both HP and ARMOR half full (50%) */
     .meter-bar-inner.hp {
       background: linear-gradient(to right, #dc2626 0%, #f87171 100%);
-      width: 80%;
+      width: 50%;
     }
 
-    .meter-bar-inner.energy {
-      background: linear-gradient(to right, #0284c7 0%, #7dd3fc 100%);
-      width: 45%;
+    .meter-bar-inner.armor {
+      background: linear-gradient(to right, #6366f1 0%, #c084fc 100%);
+      width: 50%;
     }
 
-    /* INVENTORY */
+    /* DESCRIPTION BOX / LOG */
+    .description-box {
+      position: absolute;
+      left: 0;
+      right: 0;
+      bottom: var(--inventory-height); /* sit directly above inventory row, full bleed */
+
+      background: radial-gradient(circle at 50% 0%, rgba(20,30,55,0.8) 0%, rgba(0,0,0,0.4) 70%);
+      border: 1px solid rgba(255,255,255,0.2);
+      border-radius: 0;
+      box-shadow: 0 20px 40px rgba(0,0,0,0.8),
+                  0 1px 2px rgba(255,255,255,0.12) inset;
+      padding: 10px 14px;
+      min-height: 60px;
+      max-height: 80px;
+      font-size: 0.75rem;
+      line-height: 1.2;
+      color: var(--text-primary);
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      pointer-events: none;
+    }
+
+    .description-title {
+      font-size: 0.65rem;
+      font-weight: 600;
+      text-transform: uppercase;
+      letter-spacing: 0.05em;
+      color: var(--text-dim);
+      margin-bottom: 2px;
+    }
+
+    .description-body {
+      font-size: 0.7rem;
+      color: var(--text-primary);
+      opacity: 0.9;
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
+    }
+
+    /* INVENTORY / EQUIPMENT */
     .inventory-row {
       flex: 0 0 var(--inventory-height);
       background: radial-gradient(circle at 50% 0%, rgba(40,56,84,0.4) 0%, rgba(10,15,27,0.18) 70%);
       display: flex;
       justify-content: space-around;
       align-items: center;
+      position: relative;
+      z-index: 2;
     }
 
     .slot {
@@ -179,8 +257,23 @@
       align-items: center;
       font-size: 1.5rem;
       color: #fff;
-      box-shadow: 0 8px 16px rgba(0,0,0,0.75), 0 1px 2px rgba(255,255,255,0.22) inset;
+      box-shadow: 0 8px 16px rgba(0,0,0,0.75),
+                  0 1px 2px rgba(255,255,255,0.22) inset;
       user-select: none;
+    }
+
+    /* overrides for specific equipment slots */
+    .slot.dagger,
+    .slot.shield {
+      background: linear-gradient(145deg, #1e3a8a 0%, #3b82f6 100%);
+    }
+
+    .slot.diamond {
+      background: linear-gradient(145deg, #facc15 0%, #f59e0b 100%);
+    }
+
+    .slot.poultry {
+      background: linear-gradient(145deg, #16a34a 0%, #4ade80 100%);
     }
 
     /* BOTTOM CONTROLS */
@@ -190,7 +283,7 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      padding: 6px 12px; /* even tighter */
+      padding: 6px 12px;
     }
 
     .buttons-area {
@@ -205,7 +298,8 @@
       border-radius: 50%;
       background: radial-gradient(circle at 50% 0%, rgba(255,255,255,0.18) 0%, rgba(0,0,0,0) 70%);
       border: 1px solid rgba(255,255,255,0.24);
-      box-shadow: 0 14px 28px rgba(0,0,0,0.8), 0 2px 4px rgba(255,255,255,0.18) inset, 0 0 48px rgba(168,85,247,0.45);
+      box-shadow: 0 14px 28px rgba(0,0,0,0.8),
+                  0 2px 4px rgba(255,255,255,0.18) inset;
       user-select: none;
       touch-action: manipulation;
       -webkit-user-select: none;
@@ -214,17 +308,46 @@
       border-width: 1px;
       border-style: solid;
       cursor: pointer;
+      position: relative;
+      overflow: hidden;
     }
 
-    .round-btn:active {
-      transform: scale(0.94);
-      background: radial-gradient(circle at 50% 0%, rgba(255,255,255,0.24) 0%, rgba(0,0,0,0) 70%);
+    /* inner gradient layer for color */
+    .round-btn::before {
+      content: "";
+      position: absolute;
+      inset: 0;
+      border-radius: inherit;
+      background: radial-gradient(circle at 50% 0%, var(--btn-pink-start) 0%, var(--btn-pink-end) 80%);
+      box-shadow: 0 0 48px rgba(255, 20, 147, 0.6);
+      z-index: 0;
     }
 
     .round-btn.secondary {
       width: 64px;
       height: 64px;
-      box-shadow: 0 18px 32px rgba(0,0,0,0.85), 0 2px 4px rgba(255,255,255,0.22) inset, 0 0 64px rgba(14,165,233,0.45);
+      box-shadow: 0 18px 32px rgba(0,0,0,0.85),
+                  0 2px 4px rgba(255,255,255,0.22) inset;
+    }
+
+    .round-btn.secondary::before {
+      background: radial-gradient(circle at 50% 0%, var(--btn-purple-start) 0%, var(--btn-purple-end) 80%);
+      box-shadow: 0 0 64px rgba(168,85,247,0.6);
+    }
+
+    .round-btn-inner-label {
+      position: relative;
+      z-index: 1;
+      font-size: 0.7rem;
+      font-weight: 600;
+      color: #fff;
+      text-shadow: 0 1px 2px rgba(0,0,0,0.8);
+      pointer-events: none;
+    }
+
+    .round-btn:active {
+      transform: scale(0.94);
+      background: radial-gradient(circle at 50% 0%, rgba(255,255,255,0.24) 0%, rgba(0,0,0,0) 70%);
     }
   </style>
 </head>
@@ -232,39 +355,54 @@
   <main class="device">
     <!-- TOP RESOURCES -->
     <header class="top-section">
-      <div class="resource-card"><div class="resource-main-row">💰 <span>1,234</span></div><div class="resource-label">Gold</div></div>
-      <div class="resource-card"><div class="resource-main-row">💎 <span>56</span></div><div class="resource-label">Gems</div></div>
-      <div class="resource-card"><div class="resource-main-row">🪵 <span>12</span></div><div class="resource-label">Mats</div></div>
+      <div class="resource-card gold">
+        <div class="resource-main-row">💰 <span>1,234</span></div>
+        <div class="resource-label">Gold</div>
+      </div>
+      <div class="resource-card magic">
+        <div class="resource-main-row">✨ <span>56</span></div>
+        <div class="resource-label">Magic</div>
+      </div>
+      <div class="resource-card grace">
+        <div class="resource-main-row">🕊️ <span>12</span></div>
+        <div class="resource-label">Grace</div>
+      </div>
     </header>
 
     <!-- GAME / MIDDLE -->
     <section class="middle-section">
       <section class="meters-area">
         <div class="meter-block">
-          <div class="meter-label-row"><span>HP</span><span>80 / 100</span></div>
+          <div class="meter-label-row"><span>HP</span><span>5 / 10</span></div>
           <div class="meter-bar-outer"><div class="meter-bar-inner hp"></div></div>
         </div>
 
         <div class="meter-block">
-          <div class="meter-label-row"><span>ENERGY</span><span>45%</span></div>
-          <div class="meter-bar-outer"><div class="meter-bar-inner energy"></div></div>
+          <div class="meter-label-row"><span>ARMOR</span><span>5 / 10</span></div>
+          <div class="meter-bar-outer"><div class="meter-bar-inner armor"></div></div>
         </div>
       </section>
+
+      <!-- full-width description box just above inventory -->
+      <div class="description-box">
+        <div class="description-title">Encounter</div>
+        <div class="description-body">A whisper moves through the ruins. Something is watching...</div>
+      </div>
     </section>
 
-    <!-- INVENTORY -->
+    <!-- INVENTORY / EQUIPMENT -->
     <div class="inventory-row">
-      <div class="slot">🗡️</div>
-      <div class="slot">🛡️</div>
-      <div class="slot">💎</div>
-      <div class="slot">🍗</div>
+      <div class="slot dagger">🗡️</div>
+      <div class="slot shield">🛡️</div>
+      <div class="slot diamond">💎</div>
+      <div class="slot poultry">🍗</div>
     </div>
 
     <!-- CONTROLS -->
     <nav class="bottom-section">
       <section class="buttons-area">
-        <button class="round-btn"></button>
-        <button class="round-btn secondary"></button>
+        <button class="round-btn"><span class="round-btn-inner-label">A</span></button>
+        <button class="round-btn secondary"><span class="round-btn-inner-label">B</span></button>
       </section>
     </nav>
   </main>
